# openct

./: .gitignore  ANNOUNCE  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  NEWS  QUICKSTART  README  TODO  bootstrap  configure.ac  svnignore
aclocal/: Makefile.am  ac_create_stdint_h.m4
api/: Makefile.am  README  doxygen.conf
api/html/: annotated.html  apdu_8h-source.html  buffer_8h-source.html  conf_8h-source.html  device_8h-source.html  dir_000000.html  dir_000001.html  dir_000002.html  dirs.html  driver_8h-source.html  driver_8h.html  error_8h-source.html  files.html  functions.html  functions_vars.html  ifd_8h-source.html  index.html  logging_8h-source.html  openct_8h-source.html  protocol_8h-source.html  server_8h-source.html  socket_8h-source.html  structifd__driver__ops.html  tlv_8h-source.html
debian/: README.Debian  changelog  control  copyright  files  libopenct0-dev.install  libopenct0.shlibs  openct-dev.substvars  openct.README.Debian  openct.dirs  openct.doc-base.manual  openct.docs  openct.files  openct.install  openct.postinst  openct.postrm  openct.prerm  openct.substvars  rules
doc/: AuthorsAndCredits.html  ContactInfo.html  DriverApi.html  FilesTools.html  LicenseText.html  MailingLists.html  Makefile.am  OperatingSystems.html  OverView.html  QuickStart.html  README  RecentResults.html  RemoteAccess.html  ResourcesLinks.html  SecureSetup.html  SupportedReaders.html  TroubleShooting.html  cardman.html  ccid.html  changelog.sh  doxygen.conf.in  egate.html  etoken.html  eutron.html  export-wiki.sh  export-wiki.xsl  gempc.html  ikey2032.html  ikey3000.html  index.html  kaan.html  openct.html  openct.xml  openct.xsl  pertosmart1030.html  smartboard.html  towitoko.html
doc/nonpersistent/: export-wiki.sh
etc/: .cvsignore  Info.plist  Makefile.am  hotplug.openct  hotplug.openct.in  init-script  init-script.in  openct-disable.fdi  openct-policy.fdi  openct.conf  openct.conf.in  openct.fdi  openct.hald.in  openct.udev  openct.udev.compat  openct.udev.in  openct.udev.modalias  openct.udev.modalias.in  openct.usermap  openct_pcmcia.in  openct_serial.in  openct_usb.in  openct_usb.mdev.in  opensc.conf  reader.conf.in
m4/: Makefile.am
macos/: Makefile.am  libtool-bundle
solaris/: Makefile  Makefile.client  Makefile.server  README  devices-openct-fabric.xml-dist  openct-fabric-dist  openct-hotplug-dist  openct.conf-dist  pkginfo.in  postinstall  preremove  proto
src/: Makefile  Makefile.am
src/ct/: .cvsignore  Makefile  Makefile.am  buffer.c  client.c  error.c  libopenct.pc.in  mainloop.c  path.c  socket.c  status.c  tlv.c
src/ctapi/: Makefile  Makefile.am  ctapi.c  ctapi.h
src/ifd/: .cvsignore  Makefile  Makefile.am  apdu.c  atr.c  atr.h  cardman.h  checksum.c  conf.c  confparse.c  ctbcs.c  ctbcs.h  device.c  driver.c  hotplug.c  ifd-acr30u.c  ifd-cardman.c  ifd-ccid.c  ifd-cm4000.c  ifd-cyberjack.c  ifd-egate.c  ifd-epass3k.c  ifd-etoken.c  ifd-etoken64.c  ifd-eutron.c  ifd-gempc.c  ifd-ikey2k.c  ifd-ikey3k.c  ifd-kaan.c  ifd-pertosmart1030.c  ifd-pertosmart1038.c  ifd-rutoken.c  ifd-smartboard.c  ifd-smph.c  ifd-starkey.c  ifd-towitoko.c  ifd-wbeiuu.c  ifd.conf  ifdhandler.c  ifdhandler.h  (+35 more)
src/ifd/Attic/drivers/: Makefile  ctapi.c
src/include/: Makefile  Makefile.am
src/include/openct/: .cvsignore  Makefile  Makefile.am  apdu.h  buffer.h  conf.h  device.h  driver.h  error.h  ifd.h  logging.h  openct.h  path.h  pathnames.h  protocol.h  server.h  socket.h  tlv.h
src/pcsc/: Makefile  Makefile.am  ifdhandler.h  pcsc.c
src/scdl/: Makefile.am  scdl.c
src/tools/: .cvsignore  Makefile  Makefile.am  openct-control.c  openct-tool.1.in  openct-tool.c
