# Process this file with automake to create Makefile.in

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = README export-wiki.sh export-wiki.xsl $(HTML)

HTML= AuthorsAndCredits.html ContactInfo.html DriverApi.html FilesTools.html \
	LicenseText.html MailingLists.html OperatingSystems.html \
	OverView.html QuickStart.html RemoteAccess.html ResourcesLinks.html \
	SecureSetup.html TroubleShooting.html cardman.html ccid.html \
	egate.html etoken.html eutron.html gempc.html ikey2032.html \
	ikey3000.html index.html kaan.html pertosmart1030.html \
	smartboard.html towitoko.html trac.css
